alterações no código do site

--- a/index.html
+++ b/index.html
@@ -546,14 +546,14 @@
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <h3>Endereço</h3>
-                            <p>Rua das Palmeiras, 1250<br>Bairro Centro - Joinville/SC<br>CEP: 89203-200</p>
+                            <p>Rua Gustavo Hoepfner, 76<br>Bairro Floresta - Joinville/SC<br>CEP: 89211-120</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
                         <div>
                             <h3>Telefone</h3>
-                            <p>(47) 3422-8800<br>WhatsApp: (47) 99999-8800</p>
+                            <p>(47) 3422-8800<br>WhatsApp: (47) 99627-7438</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -615,7 +615,7 @@
                     <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
-            <p>&copy; 2024 Elite Auto Detailing. Todos os direitos reservados. | Joinville - Santa Catarina</p>
+            <p>&copy; 2025 Elite Auto Detailing. Todos os direitos reservados. | Joinville - Santa Catarina</p>
         </div>
     </footer>
 
